# langchain-naver

./: pyproject.toml
libs/naver/: Makefile  pyproject.toml
libs/naver/langchain_naver/: __init__.py  chat_models.py  const.py  embeddings.py
libs/naver/tests/integration_tests/: test_chat_models.py  test_embeddings.py
libs/naver/tests/unit_tests/: test_chat_models.py  test_embeddings.py
