[project]
name = "langchain-naver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9,<4.0"
readme = "README.md"
dependencies = [
    "httpx-sse>=0.4.0",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "setuptools>=78.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"